--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "immutable": "^4.0.0-rc.12",
     "next": "10.0.6",
     "next-redux-wrapper": "^6.0.2",
@@ -17,6 +18,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
+    "swr": "^0.4.2",
     "yup": "^0.32.8"
   },
   "devDependencies": {
