--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
     "immutable": "^4.0.0-rc.12",
     "next": "10.0.6",
     "next-redux-wrapper": "^6.0.2",
+    "postcss": "^8.2.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
@@ -19,6 +21,7 @@
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "swr": "^0.4.2",
+    "tailwindcss": "^2.0.3",
     "yup": "^0.32.8"
   },
   "devDependencies": {
